the red background wont show

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets/style.css" />
-    <title>Work Day Scheduler</title>
+    <title>Work Day Schedule by Stephanie Landgraf</title>
   </head>
 
   <body>
